# industrial-jitterdebugger

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose-example.yml  pyproject.toml  requirements.txt
app/: detail.json
app/industrial-jitterdebugger/: docker-compose.yml
app/industrial-jitterdebugger/nginx/: nginx.json
docker/: Dockerfile  Dockerfile.stress  Dockerfile.webui
industrial_jitterdebugger/: jitter.py  stress.py  webui.py
src/jitter/: Dockerfile  pyproject.toml
src/stress/: pyproject.toml
src/stress/api/: app.py
src/webui/: app.py  pyproject.toml
