[tool.poetry]
name = "jitter"
version = "0.1.0"
description = "jitter tool of cpu-real-time-test project"
authors = ["siemens"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.24.1"
flask = "^3.0.3"
pandas = "1.1.5"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
