[tool.poetry]
name = "webui"
version = "0.1.0"
description = "the webui component of cpu-real-time-test project"
authors = ["Siemens"]

[tool.poetry.dependencies]
python = "^3.9.0 <3.9.7"
pyyaml = "^6.0.2"
streamlit = "^1.39.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
